# origin_hub_registry

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  OriginHubRegistry.postman_collection.json  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: config.py  main.py
app/api/: admin.py  assets.py  auth.py  orgs.py
app/core/: exceptions.py  security.py
app/db/: database.py
app/models/: asset.py  org.py  user.py
app/schemas/: asset.py  auth.py
app/services/: asset_service.py  auth_service.py  storage_service.py
app/static/: index.html
app/static/ui-assets/: index-Bd_UILlF.css  index-bchObJco.js
scripts/: make_admin.py  seed_test_data.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AssetCard.tsx  AssetModal.tsx  EmptyState.tsx  Header.tsx  SearchBar.tsx  TypeBadge.tsx  TypeFilter.tsx
ui/src/lib/: api.ts  theme.tsx
ui/src/pages/: GuidePage.tsx  HomePage.tsx
ui/src/types/: index.ts
