[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "origin-hub-registry"
version = "0.1.0"
description = "Central asset registry server for Origin CLI — skills, agents, instructions, workflows and extensions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.0.3",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.2.1",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[project.scripts]
hub = "app.main:start"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
